--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="http://nimbusbase.com/static/nimbus.min.js"></script>
+		<script src="js/nimbus.js"></script>
 		
 		
 		<script src="js/app.js"></script>
