--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<ul id="todo-list">
 						<li ng-repeat="todo in todos | filter:statusFilter track by $index" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
 							<div class="view">
-								<input class="toggle" type="checkbox" ng-model="todo.completed">
+								<input class="toggle" type="checkbox" ng-model="todo.completed"          ng-click= "changeComplete(todo)">
 								<label ng-dblclick="editTodo(todo)">{{todo.title}}</label>
 								<button class="destroy" ng-click="removeTodo(todo)"></button>
 							</div>
@@ -120,7 +120,9 @@
 					<span id="todo-count"><strong>{{remainingCount}}</strong>
 						<ng-pluralize count="remainingCount" when="{ one: 'item left', other: 'items left' }"></ng-pluralize>
 					</span>
+					<!--
 					<ul id="filters">
+
 						<li>
 							<a ng-class="{selected: status == ''} " href="#/">All</a>
 						</li>
@@ -132,6 +134,8 @@
 						</li>
 					</ul>
 					<button id="clear-completed" ng-click="clearCompletedTodos()" ng-show="completedCount">Clear completed ({{completedCount}})</button>
+					-->
+					
 				</footer>
 			</section>
 			<footer id="info">
