--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
 				text-align: center;
 				z-index: 99999;
 			}
+			
+			#header a{
+				display: block;
+				text-align: center;
+				width: 5em;
+				line-height: 25px;
+				position: absolute;
+				top: -120px;
+				right: 0px;
+				text-decoration: none;
+				padding: 0px;
+				font-size: 12px;
+			}
+
 		</style>
 
 
@@ -135,7 +149,7 @@
 					</ul>
 					<button id="clear-completed" ng-click="clearCompletedTodos()" ng-show="completedCount">Clear completed ({{completedCount}})</button>
 					-->
-					
+
 				</footer>
 			</section>
 			<footer id="info">
