--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 				<header id="header">
 					<h1>todos</h1>
 				<a class="button-block" href="#" ng-click="logout()">Logout</a>
+
+				<a class="button-block" href="#" ng-click="abc()">generate error</a>
 					<form id="todo-form" ng-submit="addTodo()">
 						<input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" autofocus>
 					</form>
