--- a/index.html
+++ b/index.html
@@ -110,13 +110,15 @@
 				<header id="header">
 					<h1>todos</h1>
 				<a class="button-block" href="#" ng-click="logout()">Logout</a>
-				<a  href="#" ng-click="abc()">generate an error</a>
+
 
 
 					<form id="todo-form" ng-submit="addTodo()">
 						<input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" autofocus>
 					</form>
+
 				</header>
+				
 				<section id="main" ng-show="todos.length" ng-cloak>
 					<input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
 					<label for="toggle-all">Mark all as complete</label>
@@ -164,6 +166,8 @@
 					<a href="http://igorminar.com">Igor Minar</a>
 				</p>
 				<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+				<p><a  href="" onclick="abc()">generate an error!!!!!!!!!!!!!!!!!</a></p>
+
 			</footer>
 		</script>
 
